[gd_scene load_steps=10 format=3 uid="uid://bvsfm8vxvkj10"]

[ext_resource type="Texture2D" uid="uid://cokoj1k0iretu" path="res://Assets/Pixel Art Top Down - Basic v1-2/Scene Overview.png" id="1_2n4xq"]
[ext_resource type="Script" uid="uid://d2pisytj8rv8n" path="res://Scenes/victory_screen.gd" id="1_8kq2x"]
[ext_resource type="FontFile" uid="uid://b1jx8trw2pv2h" path="res://Assets/zenitha_classic/ZenithaClassic_PERSONAL_USE_ONLY.otf" id="2_rc3hl"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2n4xq"]
blend_mode = 3

[sub_resource type="LabelSettings" id="LabelSettings_8kq2x"]
font = ExtResource("2_rc3hl")
font_size = 80
outline_size = 4
outline_color = Color(0.0177324, 0.0177324, 0.0177324, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rc3hl"]
font = ExtResource("2_rc3hl")
font_size = 80
outline_size = 6
outline_color = Color(0.00960463, 0.00960463, 0.00960463, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rc3hl"]
bg_color = Color(0.307994, 0.146871, 0.0212225, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kq2x"]
bg_color = Color(0.289899, 0.136929, 0.0151837, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mj8m"]
bg_color = Color(0.36027, 0.213447, 0.0442686, 1)
border_color = Color(0.222449, 0.0958937, 0.00263905, 1)
border_blend = true

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8kq2x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2n4xq")
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("CanvasItemMaterial_2n4xq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.774963, 0.518612, 0.27625, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -448.0
offset_top = 137.0
offset_right = 467.0
offset_bottom = 244.0
grow_horizontal = 2
scale = Vector2(1.84, 2.4)
pivot_offset = Vector2(360, 43)
text = "CONGRATULATIONS!"
label_settings = SubResource("LabelSettings_8kq2x")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -563.0
offset_top = 379.0
offset_right = 565.0
offset_bottom = 486.0
grow_horizontal = 2
scale = Vector2(1.56, 2.56)
text = "YOU ESCAPED  THE  MAZE!"
label_settings = SubResource("LabelSettings_rc3hl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = 72.0001
offset_right = 61.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.83263, 3.37957)
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_rc3hl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8kq2x")
theme_override_styles/normal = SubResource("StyleBoxFlat_1mj8m")
text = "TRY AGAIN"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_rc3hl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8kq2x")
theme_override_styles/normal = SubResource("StyleBoxFlat_1mj8m")
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
